--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 streamlit>=1.30.0
 feedparser>=6.0.10
 requests>=2.31.0
-beautifulsoup4>=4.12.0
+beautifulsoup4==4.12.0
+trafilatura>=1.8.0
+sumy>=0.11.0
+deep-translator>=1.11.4
+nltk>=3.8.1
